--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,58 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/images/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="assets/images/favicon/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" /> -->
     <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" 
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+
+    <!-- bootstrap css -->
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <!-- style css -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Responsive -->
+    <link rel="stylesheet" href="assets/css/responsive.css">
+    <!-- favicon -->
+    <link rel="icon" href="assets/images/fevicon.png" type="image/gif" />
+    <!-- font css -->
+    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
+    <!-- Scrollbar Custom CSS -->
+    <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
+    <!-- Tweaks for older IEs -->
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+
     <title>Expense Tracker</title>
+
+    <script>
+      (function() {
+        var path = window.location.pathname.split('/').slice(2).join('/');
+        if (path) {
+          window.location.replace('/expene_tracker_/#/' + path);
+        }
+      })();
+    </script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery-3.0.0.min.js"></script>
+    <script src="assets/js/plugin.js"></script>
+    <!-- sidebar -->
+    <script src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <!-- javascript --> 
+    <script>
+       // Material Select Initialization
+       $(document).ready(function() {
+       $('.mdb-select').materialSelect();
+       $('.select-wrapper.md-form.md-outline input.select-dropdown').bind('focus blur', function () {
+       $(this).closest('.select-outline').find('label').toggleClass('active');
+       $(this).closest('.select-outline').find('.caret').toggleClass('active');
+       });
+       });
+    </script>
+    
   </head>
   <body>
     <div id="root"></div>
